# android_universal

./: .gitignore  LICENSE  README.md  install_adb_key.cmd  install_adb_key.sh  makeramdisk.cmd  makeramdisk.sh  push_bruteforcer.cmd  push_bruteforcer.sh  requirements.txt  run_rootshell.cmd  run_rootshell.sh  setenv.cmd  su.cmd  su.sh  verify_signature.py
.github/: FUNDING.yml
Templates/: AndroidBoot.bt  AndroidVBMeta.bt  gpt.bt  super_partition.bt
Tools/: openssl.cfg
Tools/python37/: LICENSE.txt  NEWS.txt
Tools/python37/DLLs/: python_lib.cat  python_tools.cat
Tools/python37/Lib/: _dummy_thread.py  _pyio.py  argparse.py  ast.py  bdb.py  cProfile.py  cgi.py  codecs.py  contextlib.py  dataclasses.py  datetime.py  enum.py  fileinput.py  functools.py  genericpath.py  inspect.py  ipaddress.py  locale.py  mimetypes.py  os.py  pathlib.py  pdb.py  pickle.py  platform.py  plistlib.py  posixpath.py  profile.py  pstats.py  shlex.py  shutil.py  site.py  sre_parse.py  ssl.py  subprocess.py  textwrap.py  threading.py  tokenize.py  trace.py  turtle.py  typing.py  (+3 more)
root/.android/: adb_keys  adbkey
root/keys/: data.json  keys.json
root/other/: SEANDROIDENFORCE  adbd  applypatch.tar  b64xz  bruteforce  busybox  checkadb.sh  init.checkadb.rc  listen_tcpdump.sh  run_tcpdump.sh  sign.cmd  sign.sh  tcpdump  tcpdump_run.sh
root/other/64Bit/: strace  (+2 more)
root/rootshell/: enable_adb.sh  init.shell.rc  root_hack.sh  rootshell.sh
root/scripts/: bootimg  bootsignature.py  brotli  makeramdisk.py  repack.sh  sign.bat  unpack.sh
src/bootimg/: README.md  sepolicy@0644
src/bootimg/libsepol/: .qmake.stash  CMakeLists.txt  android_m_compat.h  assertion.c  avtab.c  debug.c  debug.h  genbools.c  genusers.c  handle.c  ibpkeys.c  kernel_to_common.h  libsepol.pro  node_record.c  nodes.c  polcaps.c  policydb.c  ports.c  private.h  services.c  symtab.c  user_record.c  users.c  util.c  write.c
(+349 files in other folders)
